@@ -24,4 +24,7 @@
   <services>
     <service id="page" class="TPageService" DefaultPage="GettingStarted.Introduction" />
   </services>
+  <parameters>
+  	<parameter id="enableNewComment" value="false" />
+  </parameters>
 </application>
