@@ -6,9 +6,9 @@ class Ticket191TestCase extends SeleniumTestCase
 	{
 		$this->open('tickets/index.php?page=Ticket191');
 		$this->type("ctl0\$Content\$TextBox2", "test");
-		$this->clickAndWait("//input[@type='submit' and @name='ctl0\$Content\$ctl0']", "");
+		$this->clickAndWait("name=ctl0\$Content\$ctl0");
 		$this->type("ctl0\$Content\$TextBox", "test");
-		$this->clickAndWait("//input[@type='submit' and @name='ctl0\$Content\$ctl1']", "");
+		$this->clickAndWait("name=ctl0\$Content\$ctl1");
 		$this->verifyNotVisible('ctl0_Content_ctl2');
 	}
 }
